<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginEnd="@dimen/medium_space"
        android:layout_marginTop="@dimen/medium_space"
        android:layout_marginBottom="@dimen/medium_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginEnd="@dimen/medium_space"
            android:layout_marginBottom="@dimen/small_space"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView_profileImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_launcher_foreground"/>

            <TextView
                android:id="@+id/textView_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/small_space"
                android:text="@string/username"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textSize="@dimen/medium_font_size"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>

            <ImageView
                android:id="@+id/imageView_actionMore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_more_horiz_black_24dp"/>

        </LinearLayout>

        <id.havanah.app.poetrify.lib.shapeimageview.PorterShapeImageView
            android:id="@+id/porterShapeImageView_feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginBottom="@dimen/small_space"
            android:src="@drawable/img_havanah"
            android:scaleType="centerCrop"
            app:siShape="@drawable/shape_rect"
            app:siSquare="true"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginBottom="@dimen/small_space"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginEnd="@dimen/medium_space"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_actionLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border_black_24dp"/>

                <ImageView
                    android:id="@+id/imageView_actionComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_comment_black_24dp"
                    android:layout_marginStart="@dimen/large_space"/>

                <ImageView
                    android:id="@+id/imageView_actionShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share_black_24dp"
                    android:layout_marginStart="@dimen/large_space"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_actionBookmark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/ic_bookmark_border_black_24dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginEnd="@dimen/medium_space"
            android:layout_marginTop="@dimen/small_space">

            <TextView
                android:id="@+id/textView_likes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="99"
                android:textSize="@dimen/medium_font_size"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@android:color/black" />

            <TextView
                android:text="@string/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_font_size"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginStart="@dimen/small_space"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginEnd="@dimen/medium_space"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_captionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_font_size"
                android:text="@string/username"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/textView_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_lorem_ipsum"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/open_sans_regular"
                android:textSize="@dimen/medium_font_size"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_feedTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_timestamp"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginEnd="@dimen/medium_space"
            android:fontFamily="@font/open_sans_light"
            android:textSize="@dimen/small_font_size"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorGrey"/>

</LinearLayout>