<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:background="#fff">

                <!-- Cover Image -->
                <ImageView
                    android:id="@+id/imageView_profileBanner"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_ngaji" />

                <View
                    android:layout_width="match_parent"
                    android:layout_below="@id/imageView_profileBanner"
                    android:background="@color/colorGrey"
                    android:layout_height="@dimen/small_space" />

                <!-- Round image -->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView_profileImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/img_farhan"
                    app:civ_border_color="@color/colorGrey"
                    app:civ_border_width="@dimen/small_space" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/sample_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/large_font_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_userProfession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Developer"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/medium_font_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=", "
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/medium_font_size" />

                    <TextView
                        android:id="@+id/textView_userNationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Indonesia"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/medium_font_size" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView_userAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sample_about"
                    android:textSize="@dimen/medium_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_space"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_actionEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:background="@drawable/shape_oval_blue"
                    android:gravity="center"
                    android:paddingStart="@dimen/extra_large_space"
                    android:paddingEnd="@dimen/extra_large_space"
                    android:text="@string/edit_profile"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_font_size" />

                <ImageView
                    android:id="@+id/imageView_actionSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_settings_gray_24dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_oval_border"
                    android:paddingStart="@dimen/large_space"
                    android:paddingEnd="@dimen/large_space"
                    android:layout_marginStart="@dimen/large_space" />

            </LinearLayout>

            <me.majiajie.pagerbottomtabstrip.PageNavigationView
                android:id="@+id/pageNavigationView_profile"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/layer_tab_background"
                android:layout_marginTop="@dimen/large_space" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/colorGrey" />

            <RelativeLayout
                android:id="@+id/relativeLayout_profileContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>